money: massive simplification re-org